remove debug logging (oops) add user edit option
