# src/main/java/de/darfichraus/controller/AdminController.java
@@ -2,10 +2,13 @@ package de.darfichraus.controller;
 
 import de.darfichraus.api.AdminApi;
 import de.darfichraus.dto.Credentials;
+import de.darfichraus.model.Areal;
 import de.darfichraus.model.CredentialsWithRoles;
 import de.darfichraus.model.Restriction;
+import de.darfichraus.model.Subscription;
 import de.darfichraus.service.AdditionalInformationService;
 import de.darfichraus.service.RestrictionService;
+import de.darfichraus.service.SubscriptionService;
 import de.darfichraus.service.UserService;
 import org.pac4j.mongo.profile.MongoProfile;
 import org.pac4j.springframework.annotation.ws.RequireAnyRole;
@@ -24,12 +27,14 @@ public class AdminController implements AdminApi {
     private final RestrictionService restrictionService;
     private final AdditionalInformationService additionalInformationService;
     private final UserService userService;
+    private final SubscriptionService subscriptionService;
 
     @Autowired
-    public AdminController(RestrictionService restrictionService, AdditionalInformationService additionalInformationService, UserService userService) {
+    public AdminController(RestrictionService restrictionService, AdditionalInformationService additionalInformationService, UserService userService, SubscriptionService subscriptionService) {
         this.restrictionService = restrictionService;
         this.additionalInformationService = additionalInformationService;
         this.userService = userService;
+        this.subscriptionService = subscriptionService;
     }
 
 
@@ -43,6 +48,13 @@ public class AdminController implements AdminApi {
     @RequireAnyRole("ROLE_ADMIN")
     public ResponseEntity<Void> deleteUser(final String email) {
         userService.delete(email);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+    }
+
+    @Override
+    @RequireAnyRole("ROLE_ADMIN")
+    public ResponseEntity<Void> editUser(MongoProfile mongoProfile) {
+        userService.changeUser(mongoProfile);
         return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
@@ -68,6 +80,16 @@ public class AdminController implements AdminApi {
     @Override
     public ResponseEntity<List<Restriction>> getAllRestrictions() {
         return ResponseEntity.ok(restrictionService.getAllRestrictions());
+    }
+
+    @Override
+    public ResponseEntity<List<Subscription>> getAllSubscriptions() {
+        return ResponseEntity.ok(subscriptionService.getAllSubscriptions());
+    }
+
+    @Override
+    public ResponseEntity<List<Subscription>> getSubscriptionsByArealAndArealIdentifier(Areal areal, String arealIdentifier) {
+        return ResponseEntity.ok(subscriptionService.getSubscriptionsByArealAndArealIdentifier(areal, arealIdentifier));
     }
 
     @Override
