# src/main/java/de/darfichraus/controller/SubscriptionController.java
@@ -1,7 +1,6 @@
 package de.darfichraus.controller;
 
 import de.darfichraus.api.SubscriptionsApi;
-import de.darfichraus.model.Areal;
 import de.darfichraus.model.Subscription;
 import de.darfichraus.service.SubscriptionService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,7 +9,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.validation.Valid;
-import java.util.List;
 
 @RestController
 public class SubscriptionController implements SubscriptionsApi {
@@ -32,15 +30,5 @@ public class SubscriptionController implements SubscriptionsApi {
     public ResponseEntity<Void> deleteSubscription(@Valid Subscription subscription) {
         HttpStatus status = subscriptionService.delete(subscription) ? HttpStatus.NO_CONTENT : HttpStatus.NOT_FOUND;
         return new ResponseEntity<>(status);
-    }
-
-    @Override
-    public ResponseEntity<List<Subscription>> getAllSubscriptions() {
-        return ResponseEntity.ok(subscriptionService.getAllSubscriptions());
-    }
-
-    @Override
-    public ResponseEntity<List<Subscription>> getSubscriptionsByArealAndArealIdentifier(Areal areal, String arealIdentifier) {
-        return ResponseEntity.ok(subscriptionService.getSubscriptionsByArealAndArealIdentifier(areal, arealIdentifier));
     }
 }
